css: Fix topic badge wrapping
- Sometimes the text of the topic badges was wrapped on the mobile
version.

--- a/backend/static/base.css
+++ b/backend/static/base.css
@@ -102,6 +102,7 @@ span.article-topic-badge {
   padding: 0px 0.4em 1px 0.4em;
   font-size: 0.8em;
   vertical-align: middle;
+  white-space: nowrap;
 }
 
 .login {
